--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-in-viewport",
-  "version": "6.1.0",
+  "version": "6.1.1",
   "description": "Allows us to check if an element is within the browsers visual viewport",
   "license": "MIT",
   "authors": [
@@ -74,7 +74,7 @@
     "@commitlint/config-conventional": "^9.0.0",
     "@types/jasmine": "2.8.17",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~13.13.0",
+    "@types/node": "~14.0.14",
     "all-contributors-cli": "^6.15.0",
     "codecov": "^3.1.0",
     "codelyzer": "~5.2.0",
@@ -89,6 +89,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.1.0",
+    "lint-staged": "^10.2.11",
     "ng-packagr": "^5.0.1",
     "prettier": "2.0.5",
     "protractor": "~6.0.0",
